kubevirt/enforce-instancetype/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: k6t-enforce-instancetype
status:
  ready: true
