kubevirt/enforce-instancetype/.chainsaw-test/vm-good.yaml
apiVersion: kubevirt.io/v1
kind: VirtualMachine
metadata:
  labels:
    kubevirt.io/vm: vm-cirros
  name: vm-valid
spec:
  running: false
  instancetype:
    name: c1.small
  preference:
    name: linux
  template:
    metadata:
      labels:
        kubevirt.io/vm: vm-cirros
    spec:
      domain: 
        devices: {}
      terminationGracePeriodSeconds: 0
      volumes:
      - containerDisk:
          image: busybox:1.35
        name: containerdisk
      - cloudInitNoCloud:
          userData: |
            #!/bin/sh

            echo 'printed from cloud-init userdata'
        name: cloudinitdisk
