kubevirt/enforce-instancetype/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: enforce-instancetype
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../enforce-instancetype.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: vm-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: vm-bad.yaml
